Fixed the bug with server path containing spaces on Windows